--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <script src="/src/crypto.js"></script>
+    <script src="/src/db.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
