--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="/src/crypto.js"></script>
     <script src="/src/db.js"></script>
+    <script src="/src/functions.js"></script>
     <script src="/src/pwGen.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
